--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/media.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./media.css">
 </head>
 
 <body>
