--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nike by khodjayevotabek1</title>
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./media.css">
 </head>
